--- a/data/dashboard.html
+++ b/data/dashboard.html
@@ -1,1 +1,1 @@
-<h1><strong class="ql-size-huge" style="color: rgb(255, 153, 0); background-color: rgb(0, 41, 102);"><em><s><u>Hey there!</u></s></em></strong></h1>
+<h1><strong class="ql-size-huge" style="background-color: rgb(0, 41, 102); color: rgb(255, 153, 0);"><em><s><u>Hey there!</u></s></em></strong></h1><p><br></p><p><br></p>
