--- a/html_modules/editable_announcement.html
+++ b/html_modules/editable_announcement.html
@@ -23,8 +23,12 @@
             </p>
         </div>
         <div class="d-block" style="height:80px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;padding-top:15px;">
-            <button class="btn btn-primary btn-lg d-inline btn-signin edit-btn" type="submit" style="background-color:#439d4c;width:100px;font-size:16px;height:42px;margin-right:10px;">Edit</button>
-            <button class="btn btn-primary btn-lg d-inline btn-signin delete-btn" type="submit" style="background-color:#b8395f;width:100px;font-size:16px;height:42px;">Delete</button>
+            <button class="btn btn-primary btn-lg d-inline btn-signin edit-btn" type="submit" style="background-color:#439d4c;width:100px;font-size:16px;height:42px;margin-right:10px;">
+                Edit
+            </button>
+            <button class="btn btn-primary btn-lg d-inline btn-signin delete-btn" type="submit" style="background-color:#b8395f;width:100px;font-size:16px;height:42px;">
+                Delete
+            </button>
         </div>
 
     </div>
@@ -41,7 +45,9 @@
         </div>
 
         <div class="d-block" style="height:80px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;padding-top:15px;">
-            <button class="btn btn-primary btn-block btn-lg d-inline-block btn-signin save-button" type="submit" style="background-color:#439d4c;width:100px;font-size:16px;height:42px;">Save</button>
+            <button class="btn btn-primary btn-block btn-lg d-inline-block btn-signin save-button" type="submit" style="background-color:#439d4c;width:100px;font-size:16px;height:42px;">
+                Save
+            </button>
         </div>
 
 
