Fixed navbar permission_0 layout

--- a/html_modules/navbar.html
+++ b/html_modules/navbar.html
@@ -12,7 +12,7 @@
                                                         <i class="fa fa-address-card" style="padding-right:5px;"></i>Profile
                                                     </a>
                                                 <a class="dropdown-item auth-for-post" role="presentation" href="post_announcement.html" style="display: none">
-                                                        <i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement
+                                                        <i class="fa fa-envelope-open-o auth-for-post" style="padding-right:5px;"></i>Create Announcement
                                                     </a>
                                                 <a class="dropdown-item auth-for-post" role="presentation" href="user_announcements.html" style="display: none">
                                                         <i class="fa fa-pencil"></i>&nbsp;Edit Announcements
