Fixed editing announcements.
Double-quoted string in announcement content html
messed things up, made the variable strings single-quote.

--HG--
branch : release

--- a/html_modules/editable_announcement.html
+++ b/html_modules/editable_announcement.html
@@ -58,9 +58,9 @@
         function run()
         {
             let announcement_id = "{{ announcement_id }}";
-            let announcement_title = "{{ announcement_title }}";
-            let announcement_info = "{{ announcement_info }}";
-            let announcement_content = "{{ announcement_content }}";
+            let announcement_title = '{{ announcement_title }}';
+            let announcement_info = '{{ announcement_info }}';
+            let announcement_content = '{{ announcement_content }}';
             let announcement_timestamp = "{{ announcement_timestamp }}";
 
             let announcement_not_editing = $("#" + announcement_id).find(".announcement-not-editing");
