--- a/html_modules/dashboard_announcement.html
+++ b/html_modules/dashboard_announcement.html
@@ -8,7 +8,7 @@
         </blockquote>
     </div>
 
-    <div class="d-block overflow" style="height:170px;background-color:#ffffff;font-family:'News Cycle', sans-serif;padding:10px;padding-right:20px;padding-left:20px;overflow: auto;border: 2px solid #63cb40;margin: 5px 5px;">
+    <div class="d-block overflow ql-editor" style="height:170px;background-color:#ffffff;padding:10px;padding-right:20px;padding-left:20px;overflow: auto;border: 2px solid #63cb40;margin: 5px 5px;">
         <p class="d-block">
             {{ content_raw }}
         </p>
