--- a/html_modules/editable_announcement.html
+++ b/html_modules/editable_announcement.html
@@ -12,9 +12,9 @@
                 </footer>
             </blockquote>
         </div>
-        <div class="d-block overflow" style="height:170px;background-color:#ffffff;font-family:'News Cycle', sans-serif;padding:10px;padding-right:20px;padding-left:20px;">
-            <div style="height:130px;background-color:#ffffff;font-family:'News Cycle', sans-serif;padding:10px;padding-right:20px;padding-left:20px;overflow:auto">
-                <div class="d-block announcement-content">
+        <div class="d-block overflow" style="height:170px;background-color:#ffffff;padding:10px;padding-right:20px;padding-left:20px;">
+            <div style="height:130px;background-color:#ffffff;padding:10px;padding-right:20px;padding-left:20px;overflow:auto">
+                <div class="d-block announcement-content ql-editor">
                     {{ announcement_content_raw }}
                 </div>
             </div>
@@ -40,7 +40,7 @@
             <input class="d-block announcement-info" type="text" value="{{ announcement_info }}" placeholder="Edit Club/Team" style="width:100%;margin-left:0px;font-family:'News Cycle', sans-serif;padding-left:5px;">
         </div>
 
-        <div class="d-block overflow announcement-content" id="announcement_editor{{ announcement_id }}" style="height:170px;background-color:#ffffff;font-family:'News Cycle', sans-serif;padding:10px;padding-right:20px;padding-left:20px;">
+        <div class="d-block overflow announcement-content ql-editor" id="announcement_editor{{ announcement_id }}" style="height:170px;background-color:#ffffff;padding:10px;padding-right:20px;padding-left:20px;">
             {{ announcement_content_raw }}
         </div>
 
