I really did not like that things were redirecting to index.html so moved it to dashboard.html, if you think that it should goto index we can talk.

--- a/html_modules/navbar.html
+++ b/html_modules/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
-    <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:\News Cycle\, sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="../static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
+    <div class="container"><a class="navbar-brand text-success" href="dashboard.html" style="font-family:\News Cycle\, sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="../static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
             <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1" style="font-family:\News Cycle\, sans-serif;font-size:22px;">
                         <ul class="nav navbar-nav ml-auto">
