--- a/html_modules/editable_announcement.html
+++ b/html_modules/editable_announcement.html
@@ -1,27 +1,27 @@
 
 <div id="{{ announcement_id }}">
 
-    <div class="container card-shadow announcement-not-editing" style="padding:0px;margin-bottom:21px;">
-        <div class="d-block" style="height:70px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;">
+    <div class="container card-shadow announcement-not-editing" style="padding:0px;margin-bottom:21px;border:2px solid green;">
+        <div class="d-block" style="height:70px;background-color:#439d4c;padding:10px;padding-left:20px;padding-right:20px;">
             <blockquote class="blockquote">
-                <p class="mb-0 announcement-title" style="color:rgb(33,37,41);font-family:'News Cycle', sans-serif;">
-                    {{ announcement_title }}
+                <p class="mb-0 announcement-title" style="color:rgb(255,255,255);font-family:'News Cycle', sans-serif;">
+                    Title: {{ announcement_title }}
                 </p>
-                <footer class="blockquote-footer announcement-info" style="color:rgb(33,37,41);font-family:'News Cycle', sans-serif;">
-                    {{ announcement_info }}
+                <footer class="blockquote-footer announcement-info" style="color:rgb(255,255,255);font-family:'News Cycle', sans-serif;">
+                    Club/Team: {{ announcement_info }}
                 </footer>
             </blockquote>
         </div>
-        <div class="d-block overflow" style="height:170px;background-color:#ffffff;padding:10px;padding-right:20px;padding-left:20px;">
+        <div class="d-block overflow" style="height:170px;background-color:#ffffff;padding:10px;padding-right:20px;padding-left:20px;overflow: auto;border: 2px solid #63cb40;margin: 5px 5px;">
             <div style="height:130px;background-color:#ffffff;padding:10px;padding-right:20px;padding-left:20px;overflow:auto">
                 <div class="d-block announcement-content ql-editor">
                     {{ announcement_content_raw }}
                 </div>
             </div>
-            <p class="d-block announcement-time-stamp">
-                {{ announcement_timestamp }}
-            </p>
         </div>
+		<p class="d-block" style="text-align:center">
+			{{ announcement_timestamp }}
+		</p>
         <div class="d-block" style="height:80px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;padding-top:15px;">
             <button class="btn btn-primary btn-lg d-inline btn-signin edit-btn" type="submit" style="background-color:#439d4c;width:100px;font-size:16px;height:42px;margin-right:10px;">
                 Edit
